--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,4 +1,3 @@
-
 services:
   nuxt:
     build:
@@ -6,7 +5,12 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
+      - "24678:24678" # HMR WebSocketポートを追加
     volumes:
       - .:/app              # コードをマウント
       - /app/node_modules   # コンテナ内のnode_modulesを保護（上書きされないように）
     command: npm run dev
+    environment:
+      - CHOKIDAR_USEPOLLING=true # ファイル変更検出にポーリングを使用
+      - HOST=0.0.0.0
+      - NUXT_HOST=0.0.0.0
