--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
           script: |
             echo "=== Starting deploy on Lightsail ==="
             cd ~/traiforce
+            git pull origin master
             docker compose pull
             docker compose up -d --build
             echo "=== Last 50 log lines ==="
