--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,23 +12,19 @@ jobs:
       # 1. リポジトリをチェックアウト
       - name: Checkout repository
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0   # フルクローン（履歴が必要な場合）
 
       # 2. SSH エージェントをセットアップ
       - name: Setup SSH agent
-        uses: webfactory/[email protected]
-        with:
-          ssh-private-key: ${{ secrets.LS_SSH_KEY }}
+        uses: webfactory/[email protected]  # ← バージョン指定を追加:contentReference[oaicite:2]{index=2}
 
-      # 3. ホスト鍵を追加
+      # 3. ホスト鍵を known_hosts に追加
       - name: Add Lightsail to known_hosts
         run: |
           ssh-keyscan -H ${{ secrets.LS_IP }} >> $HOME/.ssh/known_hosts
 
       # 4. SSH 経由でデプロイ実行
       - name: Deploy via SSH
-        uses: appleboy/[email protected]
+        uses: appleboy/[email protected]  # ← 明示的なタグを指定:contentReference[oaicite:3]{index=3}
         with:
           host: ${{ secrets.LS_IP }}
           username: ${{ secrets.LS_SSH_USER }}
