--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,24 +11,27 @@ jobs:
     steps:
       # 1. リポジトリをチェックアウト
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3       # リポジトリをクローンするステップ:contentReference[oaicite:5]{index=5}
+        with:
+          fetch-depth: 0                # フル履歴を取得
 
       # 2. SSH エージェントをセットアップ
       - name: Setup SSH agent
-        uses: webfactory/[email protected]  # ← バージョン指定を追加:contentReference[oaicite:2]{index=2}
+        uses: webfactory/[email protected]  # 秘密鍵をメモリ上にロード:contentReference[oaicite:6]{index=6}
 
       # 3. ホスト鍵を known_hosts に追加
       - name: Add Lightsail to known_hosts
         run: |
-          ssh-keyscan -H ${{ secrets.LS_IP }} >> $HOME/.ssh/known_hosts
+          mkdir -p $HOME/.ssh
+          ssh-keyscan -H ${{ secrets.LS_IP }} >> $HOME/.ssh/known_hosts  # ホスト鍵検証をスキップしない:contentReference[oaicite:7]{index=7}
 
       # 4. SSH 経由でデプロイ実行
       - name: Deploy via SSH
-        uses: appleboy/[email protected]  # ← 明示的なタグを指定:contentReference[oaicite:3]{index=3}
+        uses: appleboy/[email protected]  # リモートコマンド実行アクション:contentReference[oaicite:8]{index=8}
         with:
-          host: ${{ secrets.LS_IP }}
-          username: ${{ secrets.LS_SSH_USER }}
-          key: ${{ secrets.LS_SSH_KEY }}
+          host: ${{ secrets.LS_IP }}        # Lightsail の静的 IP
+          username: ${{ secrets.LS_SSH_USER }}  # SSH ユーザー名
+          key: ${{ secrets.LS_SSH_KEY }}        # 秘密鍵（エージェント経由で提供）
           port: 22
           script: |
             echo "=== Starting deploy on Lightsail ==="
