--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,28 +9,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1) リポジトリ取得
       - name: Checkout repository
-        uses: actions/checkout@v3       # GitHub 公式アクション
+        uses: actions/checkout@v3     # ← 公式アクションは v3 で固定
 
+      # 2) SSH エージェントを起動し秘密鍵をロード
       - name: Setup SSH agent
-        uses: webfactory/[email protected]   # 秘密鍵を ssh-agent に登録
+        uses: webfactory/[email protected]  # ← 最新安定タグ。必ず @ を付ける :contentReference[oaicite:2]{index=2}
+        with:
+          ssh-private-key: ${{ secrets.LS_SSH_KEY }}
 
+      # 3) Lightsail のホスト鍵を known_hosts に追加
       - name: Add Lightsail host key
         run: |
           mkdir -p "$HOME/.ssh"
-          ssh-keyscan -H ${{ secrets.LS_IP }} >> "$HOME/.ssh/known_hosts"
+          ssh-keyscan -H ${{ secrets.LS_IP }} >> "$HOME/.ssh/known_hosts"   # ホスト検証を安全に回避 :contentReference[oaicite:3]{index=3}
 
+      # 4) SSH でデプロイ
       - name: Deploy via SSH
-        uses: appleboy/[email protected]   # リモートサーバーでコマンド実行
+        uses: appleboy/[email protected]  # ← v1.2.1 は Release ページで案内されている安定タグ :contentReference[oaicite:4]{index=4}
         with:
           host:     ${{ secrets.LS_IP }}
           username: ${{ secrets.LS_SSH_USER }}
           key:      ${{ secrets.LS_SSH_KEY }}
+          port: 22
           script: |
             echo "=== Deploy start ==="
             cd ~/traiforce
             git pull origin master
             docker compose pull
             docker compose up -d --build
+            echo "=== Last 50 log lines ==="
             docker compose logs --tail 50
             echo "=== Deploy done ==="
