--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
 # .github/workflows/deploy.yml
-name: Deploy to Lightsail2
+name: Deploy to Lightsail
 
 on:
   push:
@@ -8,21 +8,17 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      # 1) リポジトリをチェックアウト
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v3
 
-      # 2) Lightsail のホスト鍵を known_hosts に追加
       - name: Add Lightsail host key
         run: |
           mkdir -p "$HOME/.ssh"
-          ssh-keyscan -H ${{ secrets.LS_IP }} >> "$HOME/.ssh/known_hosts"
+          ssh-keyscan -H ${{ secrets.LS_IP }} >> ~/.ssh/known_hosts
 
-      # 3) SSH でリモートデプロイ
       - name: Deploy via SSH
-        uses: appleboy/scp-action@v1      # ← ここだけで鍵を扱う
+        uses: appleboy/scp-action@v1
         with:
           host:     ${{ secrets.LS_IP }}
           username: ${{ secrets.LS_SSH_USER }}
@@ -34,6 +30,5 @@ jobs:
             git pull origin master
             docker compose pull
             docker compose up -d --build
-            echo "=== Last 50 log lines ==="
             docker compose logs --tail 50
             echo "=== Deploy done ==="
