--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,12 +5,12 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
-      - "24678:24678" # HMR WebSocketポートを追加
+      - "24678:24678"   # HMR
     volumes:
-      - .:/app              # コードをマウント
-      - /app/node_modules   # コンテナ内のnode_modulesを保護（上書きされないように）
+      - .:/app
+      - /app/node_modules
     command: npm run dev
     environment:
-      - CHOKIDAR_USEPOLLING=true # ファイル変更検出にポーリングを使用
-      - HOST=0.0.0.0
-      - NUXT_HOST=0.0.0.0
+      CHOKIDAR_USEPOLLING: "true"
+      HOST: 0.0.0.0
+      NUXT_HOST: 0.0.0.0
