--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
-
 services:
   nuxt:
     build:
       context: .
       dockerfile: Dockerfile
+    image: traiforce-nuxt:latest
     ports:
       - "3000:3000"
-    volumes:
-      - .:/app              # コードをマウント
-      - /app/node_modules   # コンテナ内のnode_modulesを保護（上書きされないように）
-    command: npm run dev
+    restart: unless-stopped
+    environment:
+      NODE_ENV: production
