--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: traiforce-nuxt:latest
     ports:
       - "3000:3000"
-    restart: unless-stopped
-    environment:
-      NODE_ENV: production
+    volumes:
+      - .:/app              # コードをマウント
+      - /app/node_modules   # コンテナ内のnode_modulesを保護（上書きされないように）
+    command: npm run dev
