--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,4 @@ services:
     volumes:
       - .:/app              # コードをマウント
       - /app/node_modules   # コンテナ内のnode_modulesを保護（上書きされないように）
-    command: npm run dev
+    command: npm run build
