--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,7 @@ services:
     volumes:
       - .:/app              # コードをマウント
       - /app/node_modules   # コンテナ内のnode_modulesを保護（上書きされないように）
+    environment:
+      - NODE_ENV=production
     command: npm run build
+    restart: always
