--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,5 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-    command: npm run build
+    command: npm run start
     restart: always
